--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
             <h1>Hello people</h1>
         </div>
     </div>
+    <div id="parent-div">
+        <div id="child-div">
+            <h1>Hello people</h1>
+        </div>
+    </div>
+    <div id="parent-div">
+        <div id="child-div">
+            <h1>Hello people</h1>
+        </div>
+    </div>
 
 
     <script>
